# TheButtonProbabilityAnalysis

./: Readme.md
program/: CMakeLists.txt  Readme.md  options.yml
program/TheButton/: CMakeLists.txt  NumberExtractor.cpp  NumberExtractor.hpp  catch.cpp  main.cpp  tests.cpp
program/TheButton/screen_capture_lite/src_cpp/: CMakeLists.txt
report/: TheButtonAPA.qmd
report/data/: out.csv  stats.csv
